[Android] feed processing

--- a/android/brave_java_sources.gni
+++ b/android/brave_java_sources.gni
@@ -45,9 +45,14 @@ brave_java_sources = [
   "../../brave/android/java/org/chromium/chrome/browser/appmenu/BraveTabbedAppMenuPropertiesDelegate.java",
   "../../brave/android/java/org/chromium/chrome/browser/bookmarks/BraveBookmarkUtils.java",
   "../../brave/android/java/org/chromium/chrome/browser/brave_news/BraveNewsAdapter.java",
+  "../../brave/android/java/org/chromium/chrome/browser/brave_news/BraveNewsAdapterFeed.java",
+  "../../brave/android/java/org/chromium/chrome/browser/brave_news/BraveNewsAdapterFeedCard.java",
   "../../brave/android/java/org/chromium/chrome/browser/brave_news/BraveNewsUtils.java",
   "../../brave/android/java/org/chromium/chrome/browser/brave_news/CardBuilder.java",
+  "../../brave/android/java/org/chromium/chrome/browser/brave_news/CardBuilderFeedCard.java",
   "../../brave/android/java/org/chromium/chrome/browser/brave_news/models/NewsItem.java",
+  "../../brave/android/java/org/chromium/chrome/browser/brave_news/models/FeedItemCard.java",
+  "../../brave/android/java/org/chromium/chrome/browser/brave_news/models/FeedItemsCard.java",
   "../../brave/android/java/org/chromium/chrome/browser/brave_news/models/PublisherCategory.java",
   "../../brave/android/java/org/chromium/chrome/browser/brave_stats/BraveStatsBottomSheetDialogFragment.java",
   "../../brave/android/java/org/chromium/chrome/browser/brave_stats/BraveStatsUtil.java",
