--- a/components/brave_vpn/BUILD.gn
+++ b/components/brave_vpn/BUILD.gn
@@ -110,7 +110,9 @@ source_set("unit_tests") {
     deps = [
       ":brave_vpn",
       "//base",
+      "//brave/components/skus/browser",
       "//components/prefs:test_support",
+      "//components/sync_preferences:test_support",
       "//content/test:test_support",
       "//services/network:test_support",
       "//testing/gtest",
