--- a/browser/brave_ads/sources.gni
+++ b/browser/brave_ads/sources.gni
@@ -15,6 +15,8 @@ brave_browser_brave_ads_sources = [
   "//brave/browser/brave_ads/ads_tab_helper.h",
   "//brave/browser/brave_ads/background_helper/background_helper.cc",
   "//brave/browser/brave_ads/background_helper/background_helper.h",
+  "//brave/browser/brave_ads/notification_helper/notification_helper.cc",
+  "//brave/browser/brave_ads/notification_helper/notification_helper.h",
   "//brave/browser/brave_ads/notifications/ad_notification_platform_bridge.h",
 ]
 
@@ -67,16 +69,22 @@ if (!is_android) {
 
 if (is_android) {
   brave_browser_brave_ads_sources += [
+    "//brave/browser/brave_ads/android/brave_ads_native_helper.cc",
+    "//brave/browser/brave_ads/android/brave_ads_native_helper.h",
     "//brave/browser/brave_ads/background_helper/background_helper_android.cc",
     "//brave/browser/brave_ads/background_helper/background_helper_android.h",
     "//brave/browser/brave_ads/brave_ads_host_android.cc",
     "//brave/browser/brave_ads/brave_ads_host_android.h",
+    "//brave/browser/brave_ads/notification_helper/notification_helper_android.cc",
+    "//brave/browser/brave_ads/notification_helper/notification_helper_android.h",
     "//brave/browser/brave_ads/notifications/ad_notification_platform_bridge_android.cc",
   ]
 
   brave_browser_brave_ads_deps += [
     "//brave/browser/brave_ads/android:jni_headers",
     "//brave/browser/notifications",
+    "//brave/build/android:jni_headers",
+    "//chrome/android:jni_headers",
   ]
 }
 
@@ -84,9 +92,12 @@ if (is_linux) {
   brave_browser_brave_ads_sources += [
     "//brave/browser/brave_ads/background_helper/background_helper_linux.cc",
     "//brave/browser/brave_ads/background_helper/background_helper_linux.h",
+    "//brave/browser/brave_ads/notification_helper/notification_helper_linux.cc",
+    "//brave/browser/brave_ads/notification_helper/notification_helper_linux.h",
   ]
 
   brave_browser_brave_ads_deps += [
+    "//chrome/common",
     "//ui/aura",
     "//ui/gfx/x",
   ]
@@ -96,16 +107,24 @@ if (is_mac) {
   brave_browser_brave_ads_sources += [
     "//brave/browser/brave_ads/background_helper/background_helper_mac.h",
     "//brave/browser/brave_ads/background_helper/background_helper_mac.mm",
+    "//brave/browser/brave_ads/notification_helper/notification_helper_mac.h",
+    "//brave/browser/brave_ads/notification_helper/notification_helper_mac.mm",
   ]
+
+  brave_browser_brave_ads_deps += [ "//chrome/common" ]
 }
 
 if (is_win) {
   brave_browser_brave_ads_sources += [
     "//brave/browser/brave_ads/background_helper/background_helper_win.cc",
     "//brave/browser/brave_ads/background_helper/background_helper_win.h",
+    "//brave/browser/brave_ads/notification_helper/notification_helper_win.cc",
+    "//brave/browser/brave_ads/notification_helper/notification_helper_win.h",
   ]
 
   brave_browser_brave_ads_deps += [
+    "//chrome/common",
+    "//chrome/installer/util:with_no_strings",
     "//ui/gfx",
     "//ui/views",
   ]
