Added a list of custom chains to the wallet settings page

--- a/browser/resources/settings/BUILD.gn
+++ b/browser/resources/settings/BUILD.gn
@@ -169,6 +169,8 @@ preprocess_if_expr("preprocess_generated") {
     "brave_sync_page/brave_sync_subpage.js",
     "brave_wallet_page/brave_wallet_browser_proxy.m.js",
     "brave_wallet_page/brave_wallet_page.m.js",
+    "brave_wallet_page/wallet_networks_subpage.m.js",
+    "brave_wallet_page/add_wallet_network_dialog.js",
     "default_brave_shields_page/default_brave_shields_browser_proxy.m.js",
     "default_brave_shields_page/default_brave_shields_page.m.js",
     "getting_started_page/getting_started.js",
@@ -244,6 +246,8 @@ ts_library("build_ts") {
     "brave_sync_page/brave_sync_subpage.js",
     "brave_wallet_page/brave_wallet_browser_proxy.m.js",
     "brave_wallet_page/brave_wallet_page.m.js",
+    "brave_wallet_page/wallet_networks_subpage.m.js",
+    "brave_wallet_page/add_wallet_network_dialog.js",
     "default_brave_shields_page/default_brave_shields_browser_proxy.m.js",
     "default_brave_shields_page/default_brave_shields_page.m.js",
     "getting_started_page/getting_started.js",
