--- a/browser/resources/settings/brave_wallet_page/BUILD.gn
+++ b/browser/resources/settings/brave_wallet_page/BUILD.gn
@@ -3,6 +3,7 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this file,
 # you can obtain one at http://mozilla.org/MPL/2.0/.
 
+import("//tools/polymer/html_to_js.gni")
 import("//tools/polymer/polymer.gni")
 import("//ui/webui/resources/tools/js_modulizer.gni")
 import("../settings.gni")
@@ -13,6 +14,8 @@ group("web_modules") {
   public_deps = [
     ":brave_wallet_page_module",
     ":modules",
+    ":templatize",
+    ":wallet_networks_subpage_module",
   ]
 }
 
@@ -23,8 +26,17 @@ polymer_modulizer("brave_wallet_page") {
   auto_imports = settings_auto_imports + [ "brave/browser/resources/settings/brave_wallet_page/brave_wallet_browser_proxy.html|BraveWalletBrowserProxy, BraveWalletBrowserProxyImpl" ]
   namespace_rewrites = settings_namespace_rewrites
 }
-
+polymer_modulizer("wallet_networks_subpage") {
+  js_file = "wallet_networks_subpage.js"
+  html_file = "wallet_networks_subpage.html"
+  html_type = "dom-module"
+  auto_imports = settings_auto_imports + [ "brave/browser/resources/settings/brave_wallet_page/brave_wallet_browser_proxy.html|BraveWalletBrowserProxy, BraveWalletBrowserProxyImpl" ]
+  namespace_rewrites = settings_namespace_rewrites
+}
 js_modulizer("modules") {
   input_files = [ "brave_wallet_browser_proxy.js" ]
   namespace_rewrites = settings_namespace_rewrites
+}
+html_to_js("templatize") {
+  js_files = [ "add_wallet_network_dialog.js" ]
 }
